[DPEDE-4841] Fix spacing in buttons inside a dropdown

--- a/src/chi/components/dropdown/dropdown.scss
+++ b/src/chi/components/dropdown/dropdown.scss
@@ -337,8 +337,8 @@ $sizes: (
         }
       }
 
-      > :is(chi-tooltip, chi-button) {
-        margin-right: 0.5rem;
+      > :is(chi-tooltip, chi-button) + :is(chi-tooltip, chi-button) {
+        margin-left: 0.5rem;
       }
 
       > :is(chi-tooltip, chi-button:not([disabled])) {
